<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_client"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cariNopol"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:padding="15dp"
        android:background="@drawable/green_border"
        android:hint="@string/cari_nomor_polisi"
        android:textSize="17sp"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"
        android:textColor="@color/white"
        android:text="@string/cari"
        android:textSize="17sp"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:backgroundTint="@color/green"
        app:layout_constraintStart_toStartOf="@+id/cariNopol"
        app:layout_constraintEnd_toEndOf="@+id/cariNopol"
        app:layout_constraintTop_toBottomOf="@+id/cariNopol"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_border"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/namaPemilik"
                    android:layout_weight="1"
                    android:text="@string/nama_pemilik"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="17sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/readNamaPemilik"
                    android:text=""
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/green"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/merkKendaraan"
                    android:layout_weight="1"
                    android:text="@string/merk_kendaraan"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="17sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/readMerkKendaraan"
                    android:text=""
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/green"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/wilayah"
                    android:layout_weight="1"
                    android:text="@string/wilayah"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="17sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/readWilayah"
                    android:text=""
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/green"
                    android:textSize="17sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keluar"
                android:id="@+id/keluar"
                android:textSize="17sp"
                android:backgroundTint="@color/red"
                android:textColor="@color/white"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp" />

            <TextView
                android:id="@+id/aboutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/about"
                android:textColor="@color/green"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>